--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Mooncell</string>
     <string name="action_favorite">收藏</string>
-    <string name="action_settings">设置</string>
+    <string name="action_float">悬浮窗切换</string>
     <string name="action_search">搜索</string>
     <string name="title_activity_example">exampleActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
