--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="title_activity_example">exampleActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">fgo.wiki</string>
+    <string name="nav_header_title">藤丸立香</string>
+    <string name="nav_header_subtitle">Ciao~</string>
     <string name="nav_header_desc">Navigation header</string>
 
     <string name="action_share">分享</string>
