--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="title_activity_example">exampleActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">藤丸立香</string>
+    <string name="nav_header_title">岸波白野</string>
     <string name="nav_header_subtitle">Ciao~</string>
     <string name="nav_header_desc">Navigation header</string>
 
@@ -34,4 +34,7 @@
     <string name="sponsor">支持我们</string>
     <string name="faq">求助与建议</string>
     <string name="comment">评论须知</string>
+    <string name="preference_file_key">wiki.fgo.app.PREFERENCE_FILE_KEY</string>
+    <string name="local_log_userId" />
+    <string name="local_log_userId_default" />
 </resources>
