--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="preference_file_key">wiki.fgo.app.PREFERENCE_FILE_KEY</string>
     <string name="local_log_userId" />
     <string name="local_log_userId_default" />
+    <string name="action_exit">退出</string>
 </resources>
