--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="local_log_userId" />
     <string name="local_log_userId_default" />
     <string name="action_exit">退出</string>
+    <string name="main_page">首页</string>
 </resources>
