--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="local_log_userId_default" />
     <string name="action_exit">退出</string>
     <string name="main_page">首页</string>
+    <string name="float_checkbox_state">是否可拖拽</string>
 </resources>
