--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="main_page">首页</string>
     <string name="float_checkbox_state">是否可拖拽</string>
     <string name="action_settings">设置</string>
+    <string name="tab">tab121</string>
 </resources>
