--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="action_notice">通知</string>
     <string name="action_login">登录</string>
     <string name="action_about">关于Mooncell</string>
+    <string name="action_about_client">关于客户端</string>
     <string name="sidebar_group2_title">常用</string>
     <string name="svt_overview">英灵图鉴</string>
     <string name="ce_overview">概念礼装图鉴</string>
@@ -43,4 +44,5 @@
     <string name="action_settings">设置</string>
     <string name="tab">tab1</string>
     <string name="action_diff">多栏模式</string>
+    <string name="license_info">版权信息</string>
 </resources>
