--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="action_diff">多栏模式</string>
     <string name="license_info">开源项目鸣谢</string>
     <string name="about_developer">关于开发者</string>
+    <string name="developer_info">开发者信息</string>
 </resources>
