float webview go back

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,6 @@
     <string name="license_info">开源项目鸣谢</string>
     <string name="about_developer">关于开发者</string>
     <string name="developer_info">开发者信息</string>
+    <string name="float_back_desc">Back</string>
+    <string name="float_ball_desc">floatball mode</string>
 </resources>
