--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="developer_info">开发者信息</string>
     <string name="float_back_desc">Back</string>
     <string name="float_ball_desc">floatball mode</string>
+    <string name="sidebar_group3_title">关于</string>
 </resources>
