--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="illust_overview">画师一览</string>
     <string name="jp_client_dl">日服客户端下载</string>
     <string name="sponsor">支持我们</string>
-    <string name="faq">求助与建议</string>
+    <string name="faq">反馈与建议</string>
     <string name="comment">评论须知</string>
     <string name="preference_file_key">wiki.fgo.app.PREFERENCE_FILE_KEY</string>
     <string name="local_log_userId" />
